# PyMEGDec

./: .gitignore  .jscpd.json  .mega-linter.yml  README.md  analyze_alpha_movement.py  analyze_alpha_movement_results.py  analyze_alpha_reaction_time.py  analyze_stimulus_decoding.py  cross_validation.py  evaluate_model_transfer.py  export_alpha_metrics.py  extract_alpha_signal.py  pyproject.toml  script_bootstrap.py  show_bandpass_signal_and_shifts.py  test_classifier_registry.py  test_cross_validation.py  test_evaluate_model_transfer.py  test_show_bandpass_signal_and_shifts.py  test_synthetic_data.py
.github/scripts/: install-rclone.sh
.github/workflows/: alpha_signal_visualization.yml  apply-fix4-procrustes-target-alignment.yml  apply-trial-selection-fix.yml  cross_validation.yml  docs.yml  download-meg-data.yml  mega-linter.yml  model_transfer.yml  static_checks.yml  stimulus-cross-subject-alignment-benchmarks.yml  stimulus-cross-subject-nested.yml  stimulus-cross-subject-smoke-controlled.yml  stimulus-cross-subject-smoke.yml  stimulus-cross-subject-time-resolved.yml  stimulus-decoding.yml  stimulus-hyperalignment-grid.yml  stimulus-onset-benchmark.yml  stimulus-predictions.yml  stimulus-robustness.yml  stimulus-temporal-generalization.yml  test_alpha_signal_visualization.yml  (+3 more)
docs/: cli.md  stimulus-decoding.md
fixes/: pymegdec_fix4_procrustes_target_alignment.patch
scripts/: download_meg_data_files.py  export_stimulus_cross_subject_nested_controlled.py  export_stimulus_cross_subject_time_resolved.py  export_stimulus_onset_operating_point_sweep.py  export_stimulus_onset_scan.py  export_stimulus_predictions.py  export_stimulus_robustness.py  export_stimulus_temporal_generalization.py
tests/: __init__.py  matlab_fixtures.py  test_alpha_metrics.py  test_alpha_movement.py  test_alpha_movement_analysis.py  test_alpha_signal.py  test_alpha_signal_visualization.py  test_alpha_time_axis_validation.py  test_classifier_registry.py  test_classifiers.py  test_cli_consolidation.py  test_conservative_topk.py  test_cross_validation.py  test_data_config.py  test_model_transfer.py  test_preprocessing.py  test_preprocessing_window_boundaries.py  test_reaction_time_analysis.py  test_stimulus_alignment_benchmarks.py  test_stimulus_chance.py  test_stimulus_cross_subject.py  test_stimulus_decoding.py  test_stimulus_onset_score_type.py  test_stimulus_summary_chance.py  test_stimulus_summary_participant_counts.py  test_synthetic_data.py  test_time_axis_handling.py  test_torch_models.py
(+32 files in other folders)
