[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymegdec"
version = "0.1.0"
description = "MEG decoding utilities for model transfer and cross-validation experiments."
authors = [
    { name = "Florian Pfaff", email = "pfaff@ias.uni-stuttgart.de" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
xgboost = [
    "xgboost",
]
torch = [
    "pytorch-lightning",
    "torch",
]
all = [
    "pytorch-lightning",
    "torch",
    "xgboost",
]
dev = [
    "autopep8>=2.3.2,<3.0.0",
    "pytest",
    "pytorch-lightning",
    "torch",
    "xgboost",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 180

[tool.pylint.FORMAT]
max-line-length = 180
