[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymegdec"
version = "0.1.0"
description = "Utilities for evaluating MEG decoding model transfer and cross-validation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "scikit-learn>=1.3,<2",
]

[project.optional-dependencies]
ml = [
    "pytorch-lightning>=2.2,<3",
    "torch>=2.2,<3",
    "xgboost>=2,<4",
]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
pymegdec = "pymegdec.cli:main"
pymegdec-cross-validate = "pymegdec.cli:cross_validate"
pymegdec-transfer = "pymegdec.cli:transfer"

[tool.setuptools.packages.find]
where = ["src"]
